--- a/app/src/main/res/layout/activity_uplod.xml
+++ b/app/src/main/res/layout/activity_uplod.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UplodActivity">
+    tools:context=".view.UplodActivity">
 
     <ImageView
         android:id="@+id/imageView"
